# mcp-math-demo

./: .env-example  .gitignore  README.md  pyproject.toml
src/example/: client-langchain.py  main.py  server-math-sse.py  server-math-stdio.py  utils.py
